# ground-station-core

./: .gitignore  CMakeLists.txt  README-INSTALL-MAC.md  README.md  active_update.sh  command_handler.py  default.cfg  gsc_notify.sh  isu_gs.sh  isu_gs_send_email.sh  post_install.sh  sample-default.cfg  start-fake-rotator-servers.sh
grc/: downlink-principal.grc  downlink-principal.py
src/: cfg.c  cfg.h  cmd.c  cmd.h  design.json  entry.c  entry.h  ev.c  ev.h  gnuradio.c  gnuradio.h  helpers.c  helpers.h  json.c  json.h  log.c  log.h  main.c  rest_api.c  rest_api.h  rotctl.c  rotctl.h  sat.c  sat.h  sdr.c  sdr.h  sig.c  sig.h  stats.c  stats.h
